# zecwallet-utils

./: Cargo.toml  README.md
crates/parser/: Cargo.toml  README.md
crates/parser/src/: error.rs  reader.rs  zwl.rs
crates/parser/src/zwl/: block.rs  data.rs  keys.rs  sapling_data.rs  wallet_txns.rs
crates/parser/src/zwl/keys/: orchard.rs  sapling.rs  transparent.rs
crates/zecwallet-dump/: Cargo.toml  README.md
crates/zecwallet-dump/src/: cli.rs  config.rs  main.rs  summary.rs  tracing.rs
parser/: Cargo.toml
parser/src/: error.rs  lib.rs  reader.rs  walletparser.rs  zwl.rs
parser/src/zwl/: data.rs  transactions.rs  wallet_txns.rs
parser/src/zwl/keys/: sapling.rs  transparent.rs
zecwallet-dump/: Cargo.toml
zecwallet-dump/src/: main.rs
