[package]
name = "zecwallet-parser"
version = "0.0.0"
edition = "2024"

[dependencies]
bip0039 = "0.12.0"
byteorder = "1.5.0"
hex = "0.4.3"
jubjub = "0.10.0"
prost = "0.13.4"
secp256k1 = "0.27.0"
zcash_client_backend = "0.15.0"
zcash_encoding = "0.2.2"
zcash_keys = { version = "0.5.0", features = ["orchard"] }
zcash_primitives = { version = "0.20.0", features = ["transparent-inputs"] }
incrementalmerkletree = "0.3.1"
sapling-crypto = { version = "0.3", default-features = false }

# Note: Simply bumping the version of the `orchard` crate doesn't work, because
# the upgrade eventually leads to replacing incrementalmerkletree with bridgetree,
# essentially breaking the parsing of commitment trees (and thus the parsing of the rest of the file).
orchard_old = { package = "orchard", version = "=0.3.0" }
orchard_new = { package = "orchard", version = "0.10.1" }
